views likes added in project and views are now changed as like
