# app/Http/Controllers/ProjectController.php
@@ -8,6 +8,7 @@ use Log;
 use App\Exception;
 use Session;
 use Auth;
+use JWTAuth;
 
 
 class ProjectController extends Controller
@@ -29,7 +30,7 @@ class ProjectController extends Controller
 	}
 
 	public function createProject(Request $request)
-	{   	
+	{     
 		try{
 			$Project=Project::create([
 				'link'=>$request['link'],
@@ -108,14 +109,14 @@ class ProjectController extends Controller
 		}
 		else{
 			$course=Course::where('name',$course_name)->first();
-		        if($course!=null)
-		        {
-		          $Project=Project::where('course_id',$course['id'])->get();
-		          return view('backend.Project.show',['course'=>$course,'Project'=>$Project]);
-		        }
-		        else{
-		          abort(404);
-		        }
+			if($course!=null)
+			{
+				$Project=Project::where('course_id',$course['id'])->get();
+				return view('backend.Project.show',['course'=>$course,'Project'=>$Project]);
+			}
+			else{
+				abort(404);
+			}
 		}
 	}
 
@@ -137,137 +138,104 @@ class ProjectController extends Controller
 
 
 	/**
-   * @OA\Post(
-   *     path="/api/get-projects",
-   *     tags={"Projects"},
-   *     description="Get all projects of a particular course",
-   *     @OA\Parameter(
-   *          name="token",
-   *          in="query",
-   *          description="token",
-   *          required=true,
-   *          @OA\Schema(
-   *              type="string"
-   *          )
-   *      ),
-   *     @OA\Parameter(
-   *          name="course_id",
-   *          in="query",
-   *          description="course_id of Course ",
-   *          required=true,
-   *          @OA\Schema(
-   *              type="integer"
-   *          )
-   *     ),
-   *     @OA\Parameter(
-   *          name="level",
-   *          in="query",
-   *          description="Level of projects : easy|medium|hard",
-   *          required=false,
-   *          @OA\Schema(
-   *              type="string"
-   *          )
-   *      ),
-   *     @OA\Parameter(
-   *          name="count",
-   *          in="query",
-   *          description="Count of projects,If not passed by default value of count is 10",
-   *          required=false,
-   *          @OA\Schema(
-   *              type="integer"
-   *          )
-   *      ),
-   *     @OA\Parameter(
-   *          name="page",
-   *          in="query",
-   *          description="page no  of projects,If not passed by default value of page is 1",
-   *          required=false,
-   *          @OA\Schema(
-   *              type="integer"
-   *          )
-   *      ),
-   *    @OA\Response(
-     *          response=200,
-     *      description="{[error_code=>0,msg=>'success'],[error_code=>1,msg=>'Course Id is Invalid'],[error_code=>2,'msg'=>'Course Id is Compulsory']}"
-     *     )
-     * )
-     */
-   
-   public function wsGetAllProjects(Request $request){
-      if(isset($request['course_id'])){
-          $course=Course::find($request['course_id']);
-          if($course!=null){
-			$level=isset($request['level'])?$request['level']:'';
-            $count= isset($request['count'])?$request['count']:'10';
-              if($level=='')
-              {
-                $Project=Project::where('course_id',$request['course_id'])->paginate($count);
-                return json_encode(['error_code'=>0,'Project'=>$Project]);
-              }
-              else{
-                $Project=Project::where('course_id',$request['course_id'])
-                          ->where('level',$level)
-                          ->paginate($count);
-                return json_encode(['error_code'=>0,'Project'=>$Project]);
-              }
-          }
-          else{
-            return json_encode(['error_code'=>1,'msg'=>'Course Id is Invalid']);
-          }
-      }
-      else{
-       return json_encode(['error_code'=>2,'msg'=>'Course Id is Compulsory']);
-      }
-      
-   }
+	 * @OA\Post(
+	 *     path="/api/get-projects",
+	 *     tags={"Projects"},
+	 *     description="Get all projects of a particular course",
+	 *     @OA\Parameter(
+	 *          name="token",
+	 *          in="query",
+	 *          description="token",
+	 *          required=true,
+	 *          @OA\Schema(
+	 *              type="string"
+	 *          )
+	 *      ),
+	 *     @OA\Parameter(
+	 *          name="course_id",
+	 *          in="query",
+	 *          description="course_id of Course ",
+	 *          required=true,
+	 *          @OA\Schema(
+	 *              type="integer"
+	 *          )
+	 *     ),
+	 *     @OA\Parameter(
+	 *          name="level",
+	 *          in="query",
+	 *          description="Level of projects : easy|medium|hard",
+	 *          required=false,
+	 *          @OA\Schema(
+	 *              type="string"
+	 *          )
+	 *      ),
+	 *     @OA\Parameter(
+	 *          name="count",
+	 *          in="query",
+	 *          description="Count of projects,If not passed by default value of count is 10",
+	 *          required=false,
+	 *          @OA\Schema(
+	 *              type="integer"
+	 *          )
+	 *      ),
+	 *     @OA\Parameter(
+	 *          name="page",
+	 *          in="query",
+	 *          description="page no  of projects,If not passed by default value of page is 1",
+	 *          required=false,
+	 *          @OA\Schema(
+	 *              type="integer"
+	 *          )
+	 *      ),
+	 *    @OA\Response(
+		 *          response=200,
+		 *      description="{[error_code=>0,msg=>'success'],[error_code=>1,msg=>'Course Id is Invalid'],[error_code=>2,'msg'=>'Course Id is Compulsory']}"
+		 *     )
+		 * )
+		 */
+	
+	public function wsGetAllProjects(Request $request){
+		if(isset($request['course_id'])){
+			$course=Course::find($request['course_id']);
+			if($course!=null){
+				$level=isset($request['level'])?$request['level']:'';
+				$count= isset($request['count'])?$request['count']:'10';
+				if($level=='')
+				{
+					$Project=Project::withCount(['ResourceProjectLikes as like'=>function($query){
+						$query->where('user_id',JWTAuth::user()->id);
+					}])->withCount('ResourceProjectLikes as total_likes')
+					->withCount(['ResourceProjectViews as view'=>function($query){
+						$query->where('user_id',JWTAuth::user()->id);
+					}])->withCount('ResourceProjectViews as total_views')
+					->where('course_id',$request['course_id'])
+					->paginate($count);
+					
+					return response()->json(['error_code'=>0,'Project'=>$Project]);
+				}
+				else{
+					
+					$Project=Project::withCount(['ResourceProjectLikes as like'=>function($query){
+						$query->where('user_id',JWTAuth::user()->id);
+					}])->withCount('ResourceProjectLikes as total_likes')
+					->withCount(['ResourceProjectViews as view'=>function($query){
+						$query->where('user_id',JWTAuth::user()->id);
+					}])->withCount('ResourceProjectViews as total_views')
+					->where('course_id',$request['course_id'])
+					->where('level',$level)
+					->paginate($count);
 
+					return response()->json(['error_code'=>0,'Project'=>$Project]);
+				}
+			}
+			else{
+				return response()->json(['error_code'=>1,'msg'=>'Course Id is Invalid']);
+			}
+		}
+		else{
+			return response()->json(['error_code'=>2,'msg'=>'Course Id is Compulsory']);
+		}
 
-
-
-
-   /**
-   * @OA\Post(
-   *     path="/api/view-project",
-   *     tags={"Projects"},
-   *     description="Increment View of a particular Project",
-   *     @OA\Parameter(
-   *          name="token",
-   *          in="query",
-   *          description="token",
-   *          required=true,
-   *          @OA\Schema(
-   *              type="string"
-   *          )
-   *      ),
-   *     @OA\Parameter(
-   *          name="project_id",
-   *          in="query",
-   *          description="project_id ",
-   *          required=true,
-   *          @OA\Schema(
-   *              type="integer"
-   *          )
-   *     ),
-   *     @OA\Response(
-     *          response=200,
-     *      description="{[error_code=>0,msg=>'success'],[error_code=>1,msg=>'Project Id is Invalid']}"
-     *     )
-     * )
-     */
-   public function wsViewProject(Request $request){
-
-    if(isset($request['project_id'])){
-          $project=Project::find($request['project_id']);
-          if($project!=null){
-            Project::where('id',$request['project_id'])->increment('views');
-            return response()->json(['error_code'=>0,'msg'=>'success']);
-          }
-          else{
-            return response()->json(['error_code'=>1,'msg'=>'Project Id is Invalid']);
-          }
-
-    }
-  }
-
+	}
 }
 //end of class
